--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.6",
     "emoji-picker-react": "^4.12.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
